hphp/test/slow/like_types/like_casts_bad2.php.expectf
Fatal error: Uncaught exception 'InvalidArgumentException' with message 'Invalid dict key: expected a key of type int or string, double given' in %s/test/slow/like_types/like_casts_bad2.php:4
Stack trace:
#0 {main}